# RichestTunnel

./: README.md  build.gradle  local.properties
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  anim.cpp  anim.hpp  ascii_to_geom.cpp  ascii_to_geom.hpp  common.hpp  dialog_scene.cpp  dialog_scene.hpp  engine.hpp  game_consts.hpp  indexbuf.cpp  input_util.cpp  input_util.hpp  jni_util.cpp  joystick-support.hpp  native_engine.cpp  native_engine.hpp  obstacle.cpp  obstacle.hpp  obstacle_generator.cpp  play_scene.cpp  play_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sfxman.cpp  sfxman.hpp  shader.cpp  shader.hpp  simplegeom.hpp  tex_quad.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp  ui_scene.cpp  ui_scene.hpp  util.cpp  (+5 more)
app/src/main/cpp/data/: alphabet.inl  ascii_art.inl  blurb.inl  cube_geom.inl  our_shader.inl  strings.inl  tunnel_geom.inl
app/src/main/cpp/glm/: mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
app/src/main/cpp/glm/detail/: _features.hpp  _fixes.hpp  _literals.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_matrix.inl  func_noise.hpp  func_noise.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  intrinsic_geometric.hpp  type_vec.hpp  (+16 more)
(+58 files in other folders)
